<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_payment"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rupee_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/rupee_symbol"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amount_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="true"
            android:background="@drawable/textview_background"
            android:hint="@string/amount_hint"
            android:inputType="number|numberDecimal" />
    </LinearLayout>

    <Spinner
        android:id="@+id/payment_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:dropDownSelector="@drawable/ic_down_arrow"
        android:textColor="#070707" />

    <LinearLayout
        android:id="@+id/additional_payment_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <EditText
            android:id="@+id/provider_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="true"
            android:background="@drawable/textview_background"
            android:hint="@string/provider_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/transaction_reference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:background="@drawable/textview_background"
            android:hint="@string/transaction_referenced"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancel_button"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />


        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/ok_button" />

    </LinearLayout>
</LinearLayout>

