<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/label_total_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_total_amount"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/label_total_amount"
        app:layout_constraintStart_toEndOf="@+id/label_total_amount"
        app:layout_constraintTop_toTopOf="@+id/label_total_amount" />

    <TextView
        android:id="@+id/label_payments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_payments"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/label_total_amount" />

    <LinearLayout
        android:id="@+id/payments_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/label_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/label_payments">

        <TextView
            android:id="@+id/no_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:text="@string/no_payments"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            app:singleLine="false"
            app:singleSelection="false">

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/add_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:onClick="addPayment"
        android:text="@string/add_payment_underline"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/label_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/payments_lists" />

    <Button
        android:id="@+id/save_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:text="Save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_payment" />


</androidx.constraintlayout.widget.ConstraintLayout>